fix: make buttons icon smaller, edit font weights

--- a/project/static/css/property/property-details.css
+++ b/project/static/css/property/property-details.css
@@ -20,9 +20,14 @@ body {
     min-height: 100vh;
 }
 
+.property__title {
+    font-weight: 600;
+}
+
 .property__cost {
     color: var(--primary-color); 
     margin: 1rem 0 0 0 ;
+    font-weight:600;
 }
 
 .property__actions {
